apps/ticketbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketbot
  labels:
    app: ticketbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketbot
  template:
    metadata:
      labels:
        app: ticketbot
    spec:
      containers:
      - name: ticketbot
        image: localhost:5000/webapp:latest
        imagePullPolicy: Always
        command: ["python", "webapp.py"]
        ports:
        - containerPort: 8000
